Fixed some spacing, changed Arts event pg to an accordion

--- a/ppstyles.css
+++ b/ppstyles.css
@@ -42,7 +42,11 @@ a {
     background-color: lightyellow;
 }
 
-.card-body {
+#eventForm, #feedbackForm {
     background-color: lightyellow;
     border: 1px solid darkgrey;
+}
+
+h4 {
+    background-color: paleturquoise;
 }
